--- a/strudel_atelier.html
+++ b/strudel_atelier.html
@@ -46,7 +46,7 @@ table.strudel th {
 
 <body>
 
-<h1>Strudel – Référence complète</h1>
+<h1>Strudel – Référence Atelier</h1>
 
 <!-- ===================================================== -->
 <div class="section">
@@ -107,7 +107,7 @@ table.strudel th {
 <h2>3) Modifiers – Time</h2>
 
 <table class="strudel">
-<tr><th>Fonction</th><th>Définition détaillée</th></tr>
+<tr><th>Fonction</th><th>Définition </th></tr>
 
 <tr><td>slow(n).</td><td>Multiplie la durée du pattern par n cycles</td></tr>
 <tr><td>fast(n).</td><td>Divise la durée du pattern par n</td></tr>
@@ -127,7 +127,7 @@ table.strudel th {
 <h2>4) Modifiers – Random</h2>
 
 <table class="strudel">
-<tr><th>Fonction</th><th>Définition détaillée</th></tr>
+<tr><th>Fonction</th><th>Définition </th></tr>
 
 <tr><td>choose(list).</td><td>Sélection uniforme aléatoire par événement</td></tr>
 <tr><td>wchoose(list).</td><td>Sélection pondérée</td></tr>
@@ -147,7 +147,7 @@ table.strudel th {
 <h2>5) Modifiers – Conditional</h2>
 
 <table class="strudel">
-<tr><th>Fonction</th><th>Définition détaillée</th></tr>
+<tr><th>Fonction</th><th>Définition </th></tr>
 
 <tr><td>firstOf(n).</td><td>Actif pendant les n premiers cycles</td></tr>
 <tr><td>lastOf(n).</td><td>Actif pendant les n derniers cycles</td></tr>
