--- a/strudel_atelier.html
+++ b/strudel_atelier.html
@@ -5,6 +5,16 @@
 <title>Strudel – Référence complète</title>
 
 <style>
+
+@font-face {
+  font-family: 'VG5000';
+  src: url(https://remigeorges.fr/styles/VG5000/VG5000-Regular.otf) format("opentype"), 
+       url(https://remigeorges.fr/styles/VG5000/VG5000-Regular_web.eot),     
+       url(https://remigeorges.fr/styles/VG5000/VG5000-Regular_web.woff2) format("woff2"), 
+       url(https://remigeorges.fr/styles/VG5000/VG5000-Regular_web.woff) format("woff"), 
+       url(https://remigeorges.fr/styles/VG5000/VG5000-Regular_web.otf) format("opentype");
+}
+  
 body {
   font-family: VG5000, Helvetica, sans-serif;
   background: #f2f2f2;
